--- a/EX 003/index.html
+++ b/EX 003/index.html
@@ -20,7 +20,7 @@
 <p>1.4.2 Instrumentos De Analise e fontes De Informação</p>
 
 <h2>2. O ORDENAMENTO DO TERRITÓRIO DE PORTUGAL: INSTRUMENTOS E ATORES </h2> <hr>
-<h3>Os Instrumentos De Gestão Do Territorio</h3>
+<h3>2.1 Os Instrumentos De Gestão Do Territorio</h3>
 <p>2.1.1 Os Instrumentos De Plancamento Territorial</p>
 <p>2.1.2 Os Regimes Territoriais Especiais</p>
 
