--- a/EX 003/index.html
+++ b/EX 003/index.html
@@ -22,7 +22,15 @@
 <h2>2. O ORDENAMENTO DO TERRITÓRIO DE PORTUGAL: INSTRUMENTOS E ATORES </h2> <hr>
 <h3>2.1 Os Instrumentos De Gestão Do Territorio</h3>
 <p>2.1.1 Os Instrumentos De Plancamento Territorial</p>
-<p>2.1.2 Os Regimes Territoriais Especiais</p>
+<p>2.1.2 Os Regimes Territoriais Especiais</p><hr>
+
+<h1>Coisinhas</h1>
+<p>Podemos Marcar Algo Usando O <Mark>Mark</Mark></p>
+<p>Tambem podemos deixar um texto grande usando o <big>Big</big>
+ou Deixar pequeno usando <small>Small</small></p>
+<p>Podemos deletar um texto usando <del>Del</del> ou marcar usando <ins>Ins</ins></p>
+<p>podemos inserir do tipo x<sup>2</sup>+3, ou H<sub>2</sub>O</p>
+
 
 </body>
 </html>
